# seqmask

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: beta_distribution_masking.ipynb  fixed_masking_test.ipynb
seqmask/: __init__.py  sampler.py  utils.py
seqmask/backend/: __init__.py  jax_backend.py  torch_backend.py
seqmask/masking/: __init__.py  beta.py  categorical.py  diffusion.py  fixed.py  focus.py  hybrid_span.py
seqmask/scheduler/: __init__.py  common.py  ema.py  linear.py  scheduler.py  staged_linear.py
tests/: test_focus.py  test_masking.py  test_sampler.py  test_scheduler.py  test_utils.py
