[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seqmask"
version = "1.0.0"
description = "Composable MLM masking strategies with curriculum schedulers and diffusion support."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Hazem Essam" },
]
keywords = [
    "mlm",
    "masked-language-modeling",
    "masking",
    "pretraining",
    "diffusion",
    "curriculum-learning",
    "proteins",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["seqmask"]

[tool.hatch.build.targets.sdist]
include = [
    "/seqmask",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
